tests/baselines/reference/objectBindingPatternKeywordIdentifiers04.errors.txt
objectBindingPatternKeywordIdentifiers04.ts(1,16): error TS1359: Identifier expected. 'while' is a reserved word that cannot be used here.
objectBindingPatternKeywordIdentifiers04.ts(1,22): error TS1005: ':' expected.


==== objectBindingPatternKeywordIdentifiers04.ts (2 errors) ====
    var { "while": while } = { while: 1 }
                   ~~~~~
!!! error TS1359: Identifier expected. 'while' is a reserved word that cannot be used here.
                         ~
!!! error TS1005: ':' expected.